--- a/,github/workflows/test.yml
+++ b/,github/workflows/test.yml
@@ -1,19 +1,13 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-
 on: [push]
-
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3  # Usa la versión correcta
-      - name: Set up Node.js
-        uses: actions/setup-node@v3  # Usa la versión correcta
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Install Bats
-        run: npm install -g bats  # Instala Bats
-      - name: Check Bats version
-        run: bats -v  # Muestra la versión de Bats
+      - run: npm install -g bats
+      - run: bats -v
